--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "deploy": "npm run build && node ./scripts/deploy-github.js"
+    "deploy": "gatsby build && gh-pages -d public -b master"
   }
 }
